--- a/docs/style.css
+++ b/docs/style.css
@@ -46,6 +46,8 @@ img {
 video {
     margin: 20px;
     border-radius: 10px;
+    max-width: 100%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 footer {
@@ -54,4 +56,3 @@ footer {
     padding: 10px;
     margin-top: 20px;
 }
-
